# gwascatalog.gene

./: .gitignore  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: create_test_data.py  gcsts.txt  urls.json
src/gwascatalog/gene/: __init__.py  models.py
tests/: test_models.py
